Dummy_Package_for_scratch_org/main/default/objects/System_Property__c/System_Property__c.object-meta.xml
<CustomObject>
    <label>System Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Properties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>