Dummy_Package_for_scratch_org/main/default/objects/System_Property__c/fields/Is_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Is_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this field is selected, the value won&apos;t be accessible to any user, and it will be securely saved. The value will remain hidden unless the field is unchecked</inlineHelpText>
    <label>Hide Value</label>
    <type>Checkbox</type>
</CustomField>