Dummy_Package_for_scratch_org/main/default/objects/System_Property__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Deployment_Flow__c</referenceTo>
    <relationshipLabel>System Properties</relationshipLabel>
    <relationshipName>System_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>