Dummy_Package_for_scratch_org/main/default/objects/System_Property__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <description>Read-only field used internally for system property replacement.</description>
    <formula>ParentId__c + &quot;-&quot; + API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read-only field used internally for system property replacement.</inlineHelpText>
    <label>UID</label>
    <type>Text</type>
</CustomField>