Dummy_Package_for_scratch_org/main/default/objects/System_Property__c/validationRules/API_Name_Cannot_Contain_Spaces.validationRule-meta.xml
<ValidationRule>
    <fullName>API_Name_Cannot_Contain_Spaces</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(API_Name__c, &apos; &apos;)</errorConditionFormula>
    <errorDisplayField>API_Name__c</errorDisplayField>
    <errorMessage>The API Name cannot contain blank spaces.</errorMessage>
</ValidationRule>