Dummy_Package_for_scratch_org/main/default/objects/System_Property__c/validationRules/Only_One_Parent_Is_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_One_Parent_Is_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
NOT(ISBLANK(Environment__c)),
NOT(ISBLANK(Pipeline__c))
),
AND(
NOT(ISBLANK(Environment__c)),
NOT(ISBLANK(User__c))
),
AND(
NOT(ISBLANK(User__c)),
NOT(ISBLANK(Pipeline__c))
)
)</errorConditionFormula>
    <errorMessage>A property can only be related to one parent: Environment, Pipeline, or User.</errorMessage>
</ValidationRule>