Dummy_Package_for_scratch_org/main/default/objects/System_Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>Value__c</columns>
    <columns>Is_Sensitive__c</columns>
    <columns>Pipeline__c</columns>
    <columns>Environment__c</columns>
    <columns>User__c</columns>
    <columns>ParentId__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>